decal-macros/tests/ui/fail/snippet_no_block.stderr
error: unexpected end of input, expected `{` after the `Snippet` node
 --> tests/ui/fail/snippet_no_block.rs:7:9
  |
7 |         }
  |         ^
